added searchbar and colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- title -->
     <title>BotBroker: Instantly Buy and Sell Top Rated Sneaker Bots | Secure &amp;</title>
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="https://alienraffles.netlify.app/public/img/logo.svg">
+    <link rel="icon" type="image/png" href="https://botbroker.io/favicon-32x32.png">
     <!-- Written CSS -->
     <link href="public/css/site.css" rel="stylesheet">
     <!-- Tailwindcss -->
@@ -45,7 +45,7 @@
                 <img src="https://botbroker.io/images/logo-spacing.png" alt="Logo" class="w-32 mr-2">
             </a>
             <button
-                class="text-white inline-flex p-3 rounded lg:hidden ml-auto hover:underline outline-none nav-toggler"
+                class="text-white inline-flex p-3 rounded lg:hidden ml-auto hover:text-gray-400 outline-none nav-toggler"
                 data-target="#navigation">
                 <i class="fas fa-bars"></i>
             </button>
@@ -53,37 +53,46 @@
                 <div
                     class="lg:inline-flex lg:flex-row lg:mr-auto lg:w-auto w-full lg:items-center items-start flex flex-col lg:h-auto">
                     <a href="#"
-                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite font-bold items-center justify-center hover:underline">
+                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite font-bold items-center justify-center hover:text-gray-400">
                         <span>Bots</span>
                     </a>
                     <a href="#"
-                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:underline">
+                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:text-gray-400">
                         <span>Groups</span>
                     </a>
                     <a href="#"
-                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:underline">
+                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:text-gray-400">
                         <span>Drops</span>
                     </a>
-                    <a href="#"
-                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:underline">
-                        <span>Search Bar Here</span>
-                    </a>
+                    <div class="relative text-gray-600 ml-8 hidden lg:block">
+                        <input type="search" name="serch" placeholder="Search bots..."
+                            class="bg-light border border-light1 border-3 h-10 px-12 pr-40 rounded text-sm focus:outline-none">
+                        <span class="absolute left-0 top-0 mt-3 ml-3">
+                            <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966"
+                                style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
+                                <path
+                                    d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+                            </svg>
+                        </span>
+                    </div>
                 </div>
+                <hr class="block lg:hidden">
                 <div class="lg:inline-flex lg:flex-row lg:ml-auto lg:w-auto w-full lg:items-center items-start flex flex-col lg:h-auto text-xs">
                     <a href="#"
-                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:underline">
+                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:text-gray-400">
                         <span>FAQ</span>
                     </a>
                     <a href="#"
-                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:underline">
+                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:text-gray-400">
                         <span>Account</span>
                     </a>
                     <a href="#"
-                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:underline">
+                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:text-gray-400">
                         <span>Sell</span>
                     </a>
                     <a href="#"
-                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:underline">
+                        class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-offwhite items-center justify-center hover:text-gray-400">
                         <span>Language</span>
                     </a>
                     <a href="#"
