--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </head>
 
-<body>
+<body class="bg-darkgray text-offwhite">
     <!-- content wrapper -->
     <div>
         <!-- navigation bar -->
-        <nav class="flex items-center bg-background text-offwhite p-3 flex-wrap">
+        <nav class="flex items-center bg-background text-offwhite p-3 flex-wrap nav-shaddow">
             <a href="#" class="p-2 mr-4 inline-flex items-center">
                 <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="fill-current text-white h-8 w-8 mr-2">
                     <path
                         d="M12.001 4.8c-3.2 0-5.2 1.6-6 4.8 1.2-1.6 2.6-2.2 4.2-1.8.913.228 1.565.89 2.288 1.624C13.666 10.618 15.027 12 18.001 12c3.2 0 5.2-1.6 6-4.8-1.2 1.6-2.6 2.2-4.2 1.8-.913-.228-1.565-.89-2.288-1.624C16.337 6.182 14.976 4.8 12.001 4.8zm-6 7.2c-3.2 0-5.2 1.6-6 4.8 1.2-1.6 2.6-2.2 4.2-1.8.913.228 1.565.89 2.288 1.624 1.177 1.194 2.538 2.576 5.512 2.576 3.2 0 5.2-1.6 6-4.8-1.2 1.6-2.6 2.2-4.2 1.8-.913-.228-1.565-.89-2.288-1.624C10.337 13.382 8.976 12 6.001 12z" />
                 </svg>
                 <span class="text-xl text-white font-bold uppercase tracking-wide">Talwind CSS</span> -->
-                <img src="https://botbroker.io/images/logo-spacing.png" alt="Logo" class="w-32 mr-2">
+                <img src="https://botbroker.io/images/logo-spacing.png" alt="Logo" class="w-32 mr-2" draggable="false">
             </a>
             <button
                 class="text-white inline-flex p-3 rounded lg:hidden ml-auto hover:text-gray-400 outline-none nav-toggler"
@@ -104,8 +104,39 @@
         </nav>
         <!-- Main section -->
         <main>
-            <section>
-hihi
+            <section class="mx-auto container md:max-w-80p px-4 mt-16">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-3">
+                        <!-- Title/carousel/buttons -->
+                        <div>
+                            <h3 class="font-bold">The safe & instant marketplace for legit sneaker bots</h3>
+                            <h1 class="font-bold uppercase title mt-4">INSTANTLY BUY AND SELL TOP RATED SNEAKER BOTS WITH COMPLETE PEACE OF MIND</h1>
+                            <!-- Carousel -->
+                            <div class="pt-16">
+
+                            </div>
+                            <h3 class="font-bold">Shop the most successful bots to secure the most coveted sneakers, clothing, funkos, and more with ease.</h3>
+                            <div class="pt-8 font-medium tracking-wider text-lg space-x-4">
+                                <a href="#">
+                                    <button
+                                        class="bg-secondary border border-secondary hover:shadow-inner text-white font-bold py-2 px-6 rounded transition duration-500 ease-in-out">
+                                        Watch how it works
+                                    </button>
+                                </a>
+                                <a href="#features">
+                                    <button
+                                        class="border border-offwhite hover:bg-button2 text-white font-bold py-2 px-4 rounded transition duration-500 ease-in-out">
+                                        Browse bots
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- Images -->
+                        <div class="hidden lg:block">
+                            <div class="">
+                                <img src="https://i.imgur.com/NsoOPmY.png" alt="Bot images" class="mx-auto my-auto" draggable="false">
+                            </div>
+                        </div>
+                    </div>
             </section>
 
             <section>
