increased nav height

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- content wrapper -->
     <div>
         <!-- navigation bar -->
-        <nav class="flex items-center bg-background text-offwhite p-3 flex-wrap nav-shaddow">
+        <nav class="flex items-center bg-background text-offwhite p-3 py-4 flex-wrap nav-shaddow">
             <a href="#" class="p-2 mr-4 inline-flex items-center">
                 <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="fill-current text-white h-8 w-8 mr-2">
                     <path
